--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@thzero/library_client",
-  "version": "0.5.15",
+  "version": "0.5.16",
   "description": "An opinionated library of common functionality to bootstrap a Koa based API application using MongoDb and Firebase.",
   "author": "thZero",
   "license": "MIT",
@@ -33,7 +33,7 @@
     "marked": "^1.1.0",
     "remarkable": "^2.0.1",
     "short-uuid": "^3.1.1",
-    "thenby": "^1.3.3",
+    "thenby": "^1.3.4",
     "uuid": "^8.2.0",
     "vue": "^2.6.11",
     "vue-async-computed": "^3.8.2",
@@ -42,5 +42,30 @@
     "vue-scrollto": "^2.18.1",
     "vuex": "^3.5.1",
     "vuex-persist": "^2.2.0"
+  },
+  "peerDependencies": {
+    "@alienfast/i18next-loader": "^1.1.4",
+    "@mdi/font": "^5.3.45",
+    "@vue/cli-plugin-babel": "~4.4.6",
+    "@vue/cli-plugin-eslint": "~4.4.6",
+    "@vue/cli-plugin-router": "~4.4.6",
+    "@vue/cli-plugin-vuex": "~4.4.6",
+    "@vue/cli-service": "~4.4.6",
+    "@vue/eslint-config-standard": "^5.1.2",
+    "babel-eslint": "^10.1.0",
+    "babel-plugin-lodash": "^3.3.4",
+    "cross-env": "^7.0.2",
+    "eslint": "^7.4.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "eslint-plugin-vue": "^6.2.2",
+    "material-design-icons-iconfont": "^5.0.1",
+    "sass": "^1.26.10",
+    "sass-loader": "^9.0.2",
+    "vue-cli-plugin-vuetify": "^2.0.6",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.5.0"
   }
 }
