--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@thzero/library_client",
-  "version": "0.6.12",
+  "version": "0.6.13",
   "version_major": 0,
   "version_minor": 6,
-  "version_patch": 12,
+  "version_patch": 13,
   "version_date": "07/18/2020",
   "description": "An opinionated library of common functionality to bootstrap a Koa based API application using MongoDb and Firebase.",
   "author": "thZero",
@@ -17,7 +17,7 @@
   },
   "homepage": "https://github.com/thzero/library_client#readme",
   "engines": {
-    "node": ">=13.0.1"
+    "node": ">=12.18"
   },
   "scripts": {
     "cli-update": "node -r esm ./cli.js --updateversion --pi",
@@ -45,6 +45,10 @@
     "vue-scrollto": "^2.18.1",
     "vuex": "^3.5.1",
     "vuex-persist": "^2.2.0"
+  },
+  "devDependencies": {
+    "esm": "^3.2.25",
+    "minimist": "^1.2.5"
   },
   "peerDependencies": {
     "@alienfast/i18next-loader": "^1.1.4",
