--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@thzero/library_client",
-  "version": "0.7.4",
+  "version": "0.7.6",
   "version_major": 0,
   "version_minor": 7,
-  "version_patch": 4,
-  "version_date": "07/21/2020",
+  "version_patch": 6,
+  "version_date": "07/24/2020",
   "description": "An opinionated library of common functionality to bootstrap a Koa based API application using MongoDb and Firebase.",
   "author": "thZero",
   "license": "MIT",
@@ -24,13 +24,15 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@thzero/library_common": "^0.7.10",
+    "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "crc": "^3.8.0",
-    "dayjs": "^1.8.29",
+    "dayjs": "^1.8.30",
     "dayjs-plugin-utc": "^0.1.2",
     "decimal.js-light": "^2.5.0",
     "easy-rbac": "^3.1.1",
-    "highlight.js": "^10.1.1",
+    "highlight.js": "^10.1.2",
     "lodash": "^4.17.19",
     "markdown-it": "^11.0.0",
     "marked": "^1.1.1",
