--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@thzero/library_client",
-  "version": "0.7.9",
+  "version": "0.7.10",
   "version_major": 0,
   "version_minor": 7,
-  "version_patch": 9,
+  "version_patch": 10,
   "version_date": "07/28/2020",
   "description": "An opinionated library of common functionality to bootstrap a Koa based API application using MongoDb and Firebase.",
   "author": "thZero",
@@ -25,28 +25,13 @@
   },
   "dependencies": {
     "@thzero/library_common": "^0.7.12",
-    "axios": "^0.19.2",
-    "core-js": "^3.6.5",
-    "crc": "^3.8.0",
     "dayjs": "^1.8.30",
     "dayjs-plugin-utc": "^0.1.2",
-    "decimal.js-light": "^2.5.0",
     "easy-rbac": "^3.1.1",
     "highlight.js": "^10.1.2",
-    "lodash": "^4.17.19",
     "markdown-it": "^11.0.0",
     "marked": "^1.1.1",
-    "remarkable": "^2.0.1",
-    "short-uuid": "^3.1.1",
-    "thenby": "^1.3.4",
-    "uuid": "^8.3.0",
-    "vue": "^2.6.11",
-    "vue-async-computed": "^3.8.2",
-    "vue-i18n": "^8.19.0",
-    "vue-router": "^3.3.4",
-    "vue-scrollto": "^2.18.1",
-    "vuex": "^3.5.1",
-    "vuex-persist": "^2.2.0"
+    "remarkable": "^2.0.1"
   },
   "devDependencies": {
     "@thzero/library_cli": "^0.6.16"
@@ -74,6 +59,13 @@
     "minimist": "^1.2.5",
     "sass": "^1.26.10",
     "sass-loader": "^9.0.2",
+    "vue": "^2.6.11",
+    "vue-async-computed": "^3.8.2",
+    "vue-i18n": "^8.19.0",
+    "vue-router": "^3.3.4",
+    "vue-scrollto": "^2.18.1",
+    "vuex": "^3.5.1",
+    "vuex-persist": "^2.2.0",
     "vue-cli-plugin-vuetify": "^2.0.7",
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.6.0"
