--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@thzero/library_client",
-  "version": "0.12.4",
+  "version": "0.12.5",
   "version_major": 0,
   "version_minor": 12,
-  "version_patch": 4,
-  "version_date": "01/01/2021",
-  "description": "An opinionated library of common functionality to bootstrap a Koa based API application using MongoDb and Firebase.",
+  "version_patch": 5,
+  "version_date": "01/02/2021",
+  "description": "An opinionated library of common functionality to bootstrap a VueJs based SPA application.",
   "author": "thZero",
   "license": "MIT",
   "repository": {
