--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "marked": "^1.2.7",
     "material-design-icons-iconfont": "^6.1.0",
     "remarkable": "^2.0.1",
+    "vee-validate": "^3.4.5",
     "vue": "^2.6.12",
     "vue-async-computed": "^3.9.0",
     "vue-i18n": "^8.22.2",
