--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@thzero/library_client",
-  "version": "0.12.8",
+  "version": "0.12.9",
   "version_major": 0,
   "version_minor": 12,
-  "version_patch": 8,
+  "version_patch": 9,
   "version_date": "01/02/2021",
   "description": "An opinionated library of common functionality to bootstrap a VueJs based SPA application.",
   "author": "thZero",
@@ -39,9 +39,11 @@
     "vue-i18n": "^8.22.2",
     "vue-router": "^3.4.9",
     "vue-scrollto": "^2.20.0",
-    "vuex-persist": "^3.1.3",
+    "vue-template-compiler": "^2.6.12",
+    "vuetify": "^2.4.0",
+    "vuetify-datetime-picker": "^2.1.1",
     "vuetify-loader": "^1.6.0",
-    "vue-template-compiler": "^2.6.12"
+    "vuex-persist": "^3.1.3"
   },
   "devDependencies": {
     "@thzero/library_cli": "^0.12.0"
