--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@thzero/library_client",
-  "version": "0.12.9",
+  "version": "0.12.10",
   "version_major": 0,
   "version_minor": 12,
-  "version_patch": 9,
+  "version_patch": 10,
   "version_date": "01/02/2021",
   "description": "An opinionated library of common functionality to bootstrap a VueJs based SPA application.",
   "author": "thZero",
@@ -21,8 +21,6 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@alienfast/i18next-loader": "^1.1.4",
-    "@mdi/font": "^5.8.55",
     "@thzero/library_common": "^0.12.4",
     "dayjs": "^1.9.8",
     "dayjs-plugin-utc": "^0.1.2",
@@ -31,7 +29,6 @@
     "highlight.js": "^10.5.0",
     "markdown-it": "^12.0.4",
     "marked": "^1.2.7",
-    "material-design-icons-iconfont": "^6.1.0",
     "remarkable": "^2.0.1",
     "vee-validate": "^3.4.5",
     "vue": "^2.6.12",
@@ -40,7 +37,6 @@
     "vue-router": "^3.4.9",
     "vue-scrollto": "^2.20.0",
     "vue-template-compiler": "^2.6.12",
-    "vuetify": "^2.4.0",
     "vuetify-datetime-picker": "^2.1.1",
     "vuetify-loader": "^1.6.0",
     "vuex-persist": "^3.1.3"
@@ -49,6 +45,8 @@
     "@thzero/library_cli": "^0.12.0"
   },
   "peerDependencies": {
+    "@alienfast/i18next-loader": "^1.1.4",
+    "@mdi/font": "^5.8.55",
     "core-js": "^3.8.1",
     "@vue/cli-plugin-babel": "~4.5.9",
     "@vue/cli-plugin-eslint": "~4.5.9",
@@ -64,6 +62,9 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.1.0",
     "eslint-plugin-vue": "^7.4.0",
+    "material-design-icons-iconfont": "^6.1.0",
+    "sass": "^1.32.0",
+    "sass-loader": "^10.1.0",
     "vue": "^2.6.12",
     "vue-router": "^3.4.9",
     "vuex": "^3.6.0"
