--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -25,7 +25,10 @@ jobs:
     - uses: actions/checkout@v2
       with:
         ref: dev
-    - name: Package Output
+    - name: Node Dependencies
+      run: |
+        npm install --no-package-lock
+    - name: Update Package Version
       run: |
         cat package.json
     - name: Initialize Node.js ${{ matrix.node-version }}
