--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -22,6 +22,9 @@ jobs:
         node-version: [13.x]
 
     steps:
+    - name: Input
+      run: |
+        echo label: ${{ github.event.inputs.label }}
     - uses: actions/checkout@v2
       with:
         ref: dev
@@ -59,7 +62,7 @@ jobs:
         git config --global user.name '${{ github.repository_owner }}'
         git config --global user.email '${{ github.repository_owner }}@users.noreply.github.com'
         git add .
-        git commit -m "${{ github.event.inputs.label }}"
+        git commit -m '${{ github.event.inputs.label }}'
         git push
     - name: Requires Pull Request?
       run: |
