--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,6 +29,7 @@ jobs:
     - uses: actions/checkout@v2
       with:
         ref: dev
+        fetch-depth: 2
     - name: Node Dependencies
       run: |
         npm install --no-package-lock
