--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,7 +44,9 @@ jobs:
     - name: Git Diff Check
       id: git-diff-changes
       run: |
-        git diff origin/master origin/dev
+        git diff master...dev --shortstat
+        ${git diff master...dev --shortstat}
+        echo ("git-diff-changes=" + ${git diff master...dev --shortstat}) >> $env:GITHUB_ENV
     - name: Git Check Output
       run: |
-        echo changed? ${{ steps.git-changes.outputs.changed }}
+        echo changed? ${{ env.git-diff-changes }}
