--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,8 +45,10 @@ jobs:
       id: git-diff-changes
       run: |
         git diff origin/master origin/dev --shortstat
-        expr length git diff origin/master origin/dev --shortstat
-        echo ("git-diff-changes=" + expr length git diff origin/master origin/dev --shortstat) >> $env:GITHUB_ENV
+        diff_check=$(git diff origin/master origin/dev --shortstat)
+        echo $diff_check
+        echo ${#diff_check}
+        echo ("git-diff-changes=" + ${#diff_check}) >> $env:GITHUB_ENV
     - name: Git Check Output
       run: |
         echo changed? ${{ env.git-diff-changes }}
