--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -49,7 +49,7 @@ jobs:
         echo $diff_check
         echo ${#diff_check}
         diff_check_length=${#diff_check}
-        echo ("git-diff-changes=" + $diff_check_length) >> $env:GITHUB_ENV
+        echo ::set-output name=diff_check_length::$diff_check_length
     - name: Git Check Output
       run: |
-        echo changed? ${{ env.git-diff-changes }}
+        echo ${{ steps.git-diff-changes.outputs.new_value }}
