--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -25,6 +25,7 @@ jobs:
     - uses: actions/checkout@v2
       with:
         ref: dev
+        fetch-depth: 2
     - name: Package Output
       run: |
         cat package.json
