--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "esm": "^3.2.25",
     "highlight.js": "^11.1.0",
     "marked": "^2.1.3",
+    "mitt": "^3.0.0",
     "vee-validate": "^3.4.11",
     "vue": "^2.6.14",
     "vue-async-computed": "^3.9.0",
