--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -76,15 +76,23 @@ jobs:
         echo ::set-output name=diff_check_length::$diff_check_length
     - name: Git Diff Check Output
       run: |
-        echo ${{ steps.git-diff-changes.outputs.diff_check_length }}- name: Git Commit NPM
-    - name: Git Commit NPM
-      if: github.event.client_payload.action == 'npm' && (steps.git-changes.outputs.changed == true || steps.git-diff-changes.outputs.diff_check_length > 0)
+        echo ${{ steps.git-diff-changes.outputs.diff_check_length }}
+    - name: Git Commit
+      if: github.event.client_payload.action == 'npm' && (steps.git-changes.outputs.changed == true)
       run: |
         git config --global user.name '${{ github.repository_owner }}'
         git config --global user.email '${{ github.repository_owner }}@users.noreply.github.com'
         git add .
         git commit -m "npm updates"
-        git push
+        (git push) || true
+    - name: Git Commit NPM
+      if: github.event.client_payload.action == 'npm' && (steps.git-diff-changes.outputs.diff_check_length > 0)
+      run: |
+        git config --global user.name '${{ github.repository_owner }}'
+        git config --global user.email '${{ github.repository_owner }}@users.noreply.github.com'
+        git add .
+        git commit -m "source updates"
+        (git push) || true
     - name: Git Commit Version
       if: github.event.action == 'version' && steps.git-changes.outputs.changed == true && github.event.client_payload.label != ''
       run: |
@@ -92,7 +100,7 @@ jobs:
         git config --global user.email '${{ github.repository_owner }}@users.noreply.github.com'
         git add .
         git commit -m "version updates"
-        git push
+        (git push) || true
     - name: Requires Pull Request?
       run: |
         echo changed? ${{ steps.git-changes.outputs.changed }}
