--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/thzero/library_client#readme",
   "scripts": {
     "cli-update": "./node_modules/.bin/library-cli --updateversion --pi",
+    "cli-update-w": ".\\node_modules\\.bin\\library-cli --updateversion --pi",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
@@ -28,7 +29,7 @@
     "mitt": "^3.0.0"
   },
   "devDependencies": {
-    "@thzero/library_cli": "^0.13"
+    "@thzero/library_cli": "^0.13.17"
   },
   "peerDependencies": {
     "@alienfast/i18next-loader": "^1.1.4",
