--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -29,10 +29,13 @@ jobs:
     - uses: actions/checkout@v2
       with:
         ref: dev
+    - name: Node Dependencies for CLI
+      run: |
+        npm install -g @thzero/library_cli
     - name: Node Dependencies
       run: |
         npm install --no-package-lock
-    - name: Update Package Version
+    - name: Package Output
       run: |
         cat package.json
     - name: Initialize Node.js ${{ matrix.node-version }}
@@ -42,11 +45,12 @@ jobs:
         registry-url: 'https://registry.npmjs.org'
     - name: Update Package Version
       run: |
-        npm run cli-update -- --silent
+        # npm run cli-update -- --silent
+        library-cli --updateversion --pi --silent
     - name: Check for uncommitted changes
       id: git-changes
       if: success()
-      uses: thzero/check-uncommitted-changes-action@v1.0.3
+      uses: thzero/check-uncommitted-changes-action@v1.0.2
     - name: Git Check Output
       run: |
         echo changed? ${{ steps.git-changes.outputs.changed }}
