--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@thzero/library_client",
-  "version": "0.16.20",
+  "type": "module",
+  "version": "0.17.0",
   "version_major": 0,
-  "version_minor": 16,
-  "version_patch": 20,
-  "version_date": "01/31/2023",
+  "version_minor": 17,
+  "version_patch": 0,
+  "version_date": "02/01/2023",
   "description": "An opinionated library of common functionality to bootstrap a VueJs based SPA application.",
   "author": "thZero",
   "license": "MIT",
@@ -21,7 +22,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@thzero/library_common": "^0.16",
+    "@thzero/library_common": "^0.17",
     "easy-rbac": "^3.2.0",
     "highlight.js": "^11.7.0",
     "marked": "^4.2.5",
