--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@thzero/library_client",
   "type": "module",
-  "version": "0.17.7.alpha",
+  "version": "0.17.8",
   "version_major": 0,
   "version_minor": 17,
-  "version_patch": 7,
+  "version_patch": 8,
   "version_date": "03/11/2023",
   "description": "An opinionated library of common functionality to bootstrap a VueJs based SPA application.",
   "author": "thZero",
